exports[`test should render default table header content tag 1`] = `
<th
  className="min-width-small"
  data-terra-table-header-cell={true}>
  Column Heading
</th>
`;

exports[`test should render table header content tag with ascending sort indicator 1`] = `
<th
  className="min-width-small"
  data-sort="asc"
  data-terra-table-header-cell={true}>
  Column Heading
  <span
    className="sort-indicator">
    <IconCaretUp
      className=""
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg" />
  </span>
</th>
`;

exports[`test should render table header content tag with descending sort indicator 1`] = `
<th
  className="min-width-small"
  data-sort="desc"
  data-terra-table-header-cell={true}>
  Column Heading
  <span
    className="sort-indicator">
    <IconCaretDown
      className=""
      isBidi={true}
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg" />
  </span>
</th>
`;

exports[`test should render table header content tag with maximum height fixed 1`] = `
<th
  className="min-width-small"
  data-terra-table-header-cell={true}>
  Column Heading
</th>
`;
